--- a/project/index1.html
+++ b/project/index1.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shoot the target</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="first">
-            <img src="images/subject.jpg" class="person">
-        </div>
-        <div class="second">
-        <img src="images/bullet-removebg-preview.png" class="bullet">
-     <img src="images//gun.jpg" class="gun">
+      <div class="first">
+        <div class="blood"></div>
+        <img src="images/subject.jpg" class="person" />
+      </div>
+      <div class="second">
+        <img src="images/bullet-removebg-preview.png" class="bullet" />
+        <img src="images/gun.jpg" class="gun" />
+      </div>
     </div>
-</div>
 
-<script src="script1.js"></script>
-</body>
+    <script src="script1.js"></script>
+  </body>
 </html>
