--- a/project/index.html
+++ b/project/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        h1{
-            background: black;
-            color: red;
-        }
-        #stop{
-            display: none;
-        }
+      h1 {
+        background: black;
+        color: red;
+      }
+      #stop {
+        display: none;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1 id="hehe">
-        <p id="hn">0</p>
-        <p id="huhu">0</p>
-      <button id="start">
-       Start
-      </button>
-      <button id="stop">
-       Stop
-      </button>
+      <p id="hn">0</p>
+      <p id="huhu">0</p>
+      <button id="start">Start</button>
+      <button id="stop">Stop</button>
     </h1>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
