--- a/project/SimpleCountDown/index.html
+++ b/project/SimpleCountDown/index.html
@@ -15,9 +15,9 @@
     </style>
   </head>
   <body>
-    <h1 id="hehe">
-      <p id="hn">0</p>
-      <p id="huhu">0</p>
+    <h1 id="time">
+      <p id="minute">0</p>
+      <p id="second">0</p>
       <button id="start">Start</button>
       <button id="stop">Stop</button>
     </h1>
