--- a/project/AnimationBullet/index.html
+++ b/project/AnimationBullet/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button class="hit">Shoot</button>
     <div class="container">
       <div class="first">
         <div class="blood"></div>
@@ -17,7 +18,7 @@
         <img src="images/gun.jpg" class="gun" />
       </div>
     </div>
-
+    <div class="score"></div>
     <script src="script.js"></script>
   </body>
 </html>
